<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_main"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_faq"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/faq"
        app:showAsAction="ifRoom" />

</menu>